E-journal spacing fixes and email request patches

--- a/mysite/static/css/mysite.css
+++ b/mysite/static/css/mysite.css
@@ -21,7 +21,7 @@ h3{
 }
 /* JoGESA */
 .box{
-    padding: 0 60px 0 60px;
+    padding: 0 15px 0 15px;
 }
 #earth{
     animation: earth 4s ease-in-out infinite alternate;
